# eli.nabro

./: .gitignore  pyproject.toml  readme.md
Day1/: gpt3.5turbo_gsm8k_complex.ipynb  gpt3.5turbo_gsm8k_complex_with_lingua_compress.ipynb  lingua_practice.ipynb
Day1/outputs/: test_gpt_3.5_turbo_complex.txt
Day1/prompt_engineering/: prompt_ollama.ipynb  prompt_practice.ipynb
Day2/Rag1-10/: D2_pracatice.ipynb
Day2/rag1-10/: d2_project1.ipynb
Day2/rag1-10/raw_data/: web_raw.txt
Day3/practice/: agent.ipynb
Day3/project/: chain_executor.py  langchain_graph.py  langchain_llm_objects.py  streamlit_main.py
