[tool.poetry]
name = "eli-nabro"
version = "0.1.0"
description = ""
authors = ["eli.nabro <eli.nabro@kakaocorp.com>"]
readme = "README.md"
packages = [{include = "eli"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.34.0"
tqdm = "^4.66.4"
datasets = "^2.20.0"
tenacity = "^8.3.0"
jupyter = "^1.0.0"
numpy = "^2.0.0"
llmlingua = "^0.2.2"
ollama = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
