[tool.poetry]
name = "eli-nabro"
version = "0.1.0"
description = ""
authors = ["eli.nabro <eli.nabro@kakaocorp.com>"]
readme = "README.md"
packages = [{include = "eli"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.34.0"
tqdm = "^4.66.4"
datasets = "^2.20.0"
tenacity = "^8.3.0"
jupyter = "^1.0.0"
numpy = "^1.21"
llmlingua = "^0.2.2"
ollama = "^0.2.1"
langchain-community = "^0.2.5"
nest-asyncio = "^1.6.0"
lxml = "^5.2.2"
beautifulsoup4 = "^4.12.3"
pypdf = "^4.2.0"
pdfplumber = "^0.11.1"
pymupdf = "^1.24.5"
frontend = "^0.0.3"
langchain-text-splitters = "^0.2.1"
langchain-openai = "^0.1.8"
scipy = "^1.13.1"
langchain-huggingface = "^0.0.3"
langchain-chroma = "^0.1.1"
sentence-transformers = "^3.0.1"
langchainhub = "^0.1.20"
langsmith = "^0.1.79"
tiktoken = "^0.7.0"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
